--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.3",
+    "eth-lightwallet": "^2.5.6",
+    "ethereumjs-tx": "^1.3.3",
+    "ethereumjs-util": "^5.1.2",
     "express": "~4.15.2",
     "express-jwt": "^5.3.0",
     "express-validator": "^4.2.1",
@@ -24,6 +27,7 @@
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "web3": "0.19.0",
     "xss-filters": "^1.2.7"
   }
 }
