--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "errorhandler": "^1.4.3",
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-util": "^5.1.2",
+    "ethereumjs-wallet": "^0.6.0",
     "express": "^4.14.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.14.2",
@@ -52,6 +53,7 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
+    "node-cron": "^1.2.1",
     "nodemailer": "^2.6.4",
     "passport": "0.3.2",
     "passport-facebook": "^2.1.1",
