Changed database name in .env file.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017
-MONGOLAB_URI=mongodb://localhost:27017
+MONGODB_URI=mongodb://localhost:27017/trust-wallet
+MONGOLAB_URI=mongodb://localhost:27017/trust-wallet
 
 SESSION_SECRET=ashdfjhasdlkjfhalksdjhflak
 
