--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "@types/winston": "^2.3.7",
     "async": "^2.1.2",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
@@ -50,6 +51,7 @@
     "express-session": "^1.14.2",
     "express-validator": "^3.1.3",
     "fbgraph": "^1.3.0",
+    "fs": "0.0.1-security",
     "lodash": "^4.17.4",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
@@ -59,7 +61,8 @@
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "request": "^2.78.0",
-    "web3": "^1.0.0-beta.24"
+    "web3": "^1.0.0-beta.24",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "@types/async": "^2.0.40",
