--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     ],
     "testEnvironment": "node"
   },
+  "engines": {
+    "node": "6.11.3"
+  },
   "dependencies": {
-    "@types/winston": "^2.3.7",
     "async": "^2.1.2",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
@@ -58,19 +60,18 @@
     "node-cron": "^1.2.1",
     "nodemailer": "^2.6.4",
     "passport": "0.3.2",
-    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "request": "^2.78.0",
+    "typescript": "^2.5.3",
     "web3": "^1.0.0-beta.24",
-    "winston": "^2.4.0"
-  },
-  "devDependencies": {
+    "winston": "^2.4.0",
     "@types/async": "^2.0.40",
+    "@types/winston": "^2.3.7",
     "@types/bcrypt-nodejs": "0.0.30",
     "@types/body-parser": "^1.16.2",
     "@types/compression": "0.0.33",
     "@types/connect-mongo": "0.0.32",
-    "@types/dotenv": "^2.0.20",
+    "@types/dotenv": "^2.0.23",
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.35",
     "@types/express-session": "0.0.32",
@@ -78,12 +79,11 @@
     "@types/jquery": "^2.0.41",
     "@types/lodash": "^4.14.63",
     "@types/mongodb": "^2.1.43",
-    "@types/mongoose": "^4.7.9",
-    "@types/morgan": "^1.7.32",
+    "@types/mongoose": "^4.7.24",
+    "@types/morgan": "^1.7.35",
     "@types/node": "^7.0.12",
     "@types/nodemailer": "^1.3.32",
-    "@types/passport": "^0.3.3",
-    "@types/passport-facebook": "^2.1.3",
+    "@types/passport": "^0.3.5",
     "@types/request": "0.0.45",
     "@types/supertest": "^2.0.0",
     "concurrently": "^3.4.0",
@@ -93,7 +93,6 @@
     "shelljs": "^0.7.7",
     "supertest": "^2.0.1",
     "ts-jest": "^19.0.8",
-    "tslint": "^5.0.0",
-    "typescript": "^2.4.0"
+    "tslint": "^5.0.0"
   }
 }
