--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Philipp Rieger",
   "scripts": {
     "start": "npm run watch-ts && npm run tslint",
-    "build-ts": "tsc",
+    "build": "tsc",
     "watch-ts": "tsc-watch --onSuccess \"nodemon dist/Server.js\"",
     "test": "mocha --compilers ts:ts-node/register",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
