--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/async": "^2.0.40",
     "@types/bcrypt-nodejs": "0.0.30",
+    "@types/bluebird": "^3.5.18",
     "@types/body-parser": "^1.16.2",
     "@types/chai": "^4.0.4",
     "@types/compression": "0.0.33",
@@ -32,7 +33,7 @@
     "@types/lodash": "^4.14.63",
     "@types/mocha": "^2.2.44",
     "@types/mongodb": "^2.1.43",
-    "@types/mongoose": "^4.7.24",
+    "@types/mongoose": "^4.7.29",
     "@types/mongoose-paginate": "^5.0.6",
     "@types/morgan": "^1.7.35",
     "@types/node": "^7.0.12",
@@ -59,15 +60,15 @@
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-util": "^5.1.2",
     "ethereumjs-wallet": "^0.6.0",
-    "express": "^4.14.0",
+    "express": "^4.16.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.14.2",
-    "express-validator": "^3.1.3",
+    "express-validator": "^3.2.1",
     "fbgraph": "^1.3.0",
     "fs": "0.0.1-security",
     "lodash": "^4.17.4",
     "mocha": "^4.0.1",
-    "mongoose": "^4.6.6",
+    "mongoose": "^4.13.6",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.7.0",
     "node-cron": "^1.2.1",
@@ -83,7 +84,7 @@
     "tsc-watch": "^1.0.10",
     "tslint": "^5.0.0",
     "typescript": "^2.5.3",
-    "web3": "^1.0.0-beta.24",
+    "web3": "^1.0.0-beta.26",
     "winston": "^2.4.0",
     "xss-filters": "^1.2.7"
   }
