--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=8000
 
 # mongodb:27017 it's a mongdb address in docker env
-MONGODB_URI=mongodb://mongodb:27017/trust-wallet
+MONGODB_URI=mongodb://localhost:27017/trust-wallet
 
 # Main ethereum rpc server
 RPC_SERVER=http://127.0.0.1:8545
