--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 MONGODB_URI=mongodb://localhost:27017/trust-wallet
 RPC_SERVER=http://127.0.0.1:8545
+APN_KEY=FILL_ME_IN
+APN_KEYID=FILL_ME_IN
+APN_TEAMID=FILL_ME_IN
+APN_BUNDLEID=FILL_ME_IN
