--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": true,
+        "removeComments": true,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
