--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chai": "^4.1.2",
     "coinmarketcap-api": "^2.0.0",
     "concurrently": "^3.4.0",
+    "config": "^1.29.2",
     "connect-mongo": "^2.0.0",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
@@ -56,8 +57,8 @@
     "express-session": "^1.14.2",
     "express-validator": "^4.3.0",
     "fs": "0.0.2",
-    "mongoose": "^5.0.0",
     "mocha": "^5.0.0",
+    "mongoose": "^5.0.0",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.7.0",
     "node-cron": "^1.2.1",
