--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chai": "^4.1.2",
     "coinmarketcap-api": "^2.0.0",
     "concurrently": "^3.4.0",
+    "config": "^1.29.2",
     "connect-mongo": "^2.0.0",
     "cors": "^2.8.4",
     "dotenv": "^5.0.0",
