--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chai": "^4.1.2",
     "coinmarketcap-api": "^2.0.0",
     "concurrently": "^3.4.0",
+    "config": "^1.29.4",
     "connect-mongo": "^2.0.0",
     "cors": "^2.8.4",
     "errorhandler": "^1.4.3",
