--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/bluebird": "^3.5.19",
     "@types/body-parser": "^1.16.2",
     "@types/chai": "^4.0.4",
+    "@types/config": "0.0.34",
     "@types/connect-mongo": "0.0.35",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.0.35",
