--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.15.2",
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "coinmarketcap-api": "^2.0.0",
     "concurrently": "^3.4.0",
     "config": "^1.29.4",
