--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@types/request": "2.47.0",
     "@types/winston": "^2.3.7",
     "@types/xss-filters": "0.0.27",
-    "@vikmeup/node-pushnotifications": "vikmeup/node-pushnotifications#1.0.19",
     "abi-decoder": "kolya182/abi-decoder#master",
     "async": "^2.1.2",
     "aws-sdk": "^2.204.0",
@@ -67,7 +66,7 @@
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.7.0",
     "node-cron": "^1.2.1",
-    "node-pushnotifications": "^1.0.18",
+    "@shackpank/node-pushnotifications": "^0.1.1",
     "request": "^2.78.0",
     "svg2png": "^4.1.1",
     "ts-node": "^5.0.0",
