Switch apn library

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/winston": "^2.3.7",
     "@types/xss-filters": "0.0.27",
     "abi-decoder": "kolya182/abi-decoder#master",
+    "apn": "^2.2.0",
     "async": "^2.1.2",
     "aws-sdk": "^2.204.0",
     "axios": "^0.17.1",
@@ -66,7 +67,6 @@
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.7.0",
     "node-cron": "^1.2.1",
-    "node-pushnotifications": "^1.0.18",
     "request": "^2.78.0",
     "svg2png": "^4.1.1",
     "ts-node": "^5.0.0",
