--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^3.0.0",
-    "coinmarketcap-api": "^2.1.0",
+    "coinmarketcap-api": "git://github.com/kolya182/coinmarketcap-api.git#getTicker-limit-0",
     "compression": "^1.7.2",
     "concurrently": "^3.4.0",
     "config": "^1.29.4",
