#255 - increase npm test timeout - adjust logging level

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development npm run watch-ts && npm run tslint",
     "build": "tsc",
-    "watch-ts": "tsc-watch --onSuccess \"nodemon dist/Server.js\"",
-    "test": "cross-env NODE_ENV=test mocha --timeout 9000 --recursive --require ts-node/register 'test/**/*.test.ts' --exit",
+    "watch-ts": "tsc-watch --onSuccess \"nodemon $NODE_DEBUG_OPTION dist/Server.js\"",
+    "test": "cross-env NODE_ENV=test mocha --timeout 99999 --recursive --require ts-node/register 'test/**/*.test.ts' --exit",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "tslint-fix": "tslint -c tslint.json -p tsconfig.json --fix",
     "debug": "npm run build && npm run watch-debug",
